--- a/client/webserver/site/src/html/register.tmpl
+++ b/client/webserver/site/src/html/register.tmpl
@@ -29,12 +29,12 @@
     </form>
 
     {{- /* REG ASSET SELECTOR */ -}}
-    <form class="d-hide" id="regAssetForm">
+    <form class="d-hide mw-425" id="regAssetForm">
       {{template "regAssetForm"}}
     </form>
 
     {{- /* CONFIRM FEE PAYMENT */ -}}
-    <form class="d-hide" id="confirmRegForm">
+    <form class="d-hide mw-425" id="confirmRegForm">
       {{template "confirmRegistrationForm"}}
     </form>
 
