improve noWallet message and add to translation
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -383,9 +383,7 @@
               </form>
 
               {{- /* BALANCES */ -}}
-              <div id="noWallet" class="p-3 brdrbottom flex-center fs16 grey d-hide">
-                Create wallets to trade
-              </div>
+              <div id="noWallet" class="p-3 brdrbottom flex-center fs16 grey d-hide"></div>
               <div id="walletInfoTmpl" class="brdrtop brdrbottom mb-3 d-flex flex-column align-items-stretch min-fit">
                 <div class="d-flex align-items-center px-3 py-1 brdrbottom" data-tmpl="walletIcons">
                   <img data-tmpl="logo" class="micro-icon me-1">
